// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage renders correctly 1`] = `
[
  <h1
    className="heading-styles"
  >
    EVENTS
  </h1>,
  <br />,
  <div
    id="top-menu"
  >
    <div
      className="dropdown"
      id="dropdown-menu"
    >
      <button
        aria-expanded={false}
        className="dropdown-toggle btn btn-success"
        disabled={false}
        id="dropdown-basic"
        onClick={[Function]}
        type="button"
      >
        Events
      </button>
    </div>
    <div
      style={
        {
          "display": "flex",
        }
      }
    >
      <form
        className=""
        inline="true"
        onSubmit={[Function]}
      >
        <div>
          <input
            className="form-control"
            id="searchEvent"
            name="locationSearch"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </form>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Search Event
      </button>
    </div>
    <button
      className="btn btn-primary"
      disabled={false}
      id="logout-btn"
      type="button"
    >
      Log Out
    </button>
  </div>,
  <div
    className="create-edit-container"
  />,
]
`;

exports[`LogIn renders correctly 1`] = `
<div
  className="authentication-container"
>
  <h1
    className="heading-styles"
  >
    Find Upcoming Events
  </h1>
  <div
    className="main-form-container"
  >
    <p>
      Login to an Account
    </p>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div>
        <input
          className="form-control"
          id="formLoginEmail"
          name="email"
          onChange={[Function]}
          placeholder="Email"
          type="text"
          value=""
        />
      </div>
      <br />
      <div>
        <input
          className="form-control"
          id="formLoginPassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="submit-details btn btn-primary"
        disabled={false}
        type="submit"
      >
        Login
      </button>
      <p
        style={
          {
            "textDecoration": "underline",
          }
        }
      >
        or
      </p>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Register
      </button>
    </form>
  </div>
</div>
`;

exports[`MainComponent renders correctly 1`] = `
<div>
  <div
    className="authentication-container"
  >
    <h1
      className="heading-styles"
    >
      Find Upcoming Events
    </h1>
    <div
      className="main-form-container"
    >
      <p>
        Login to an Account
      </p>
      <form
        className=""
        onSubmit={[Function]}
      >
        <div>
          <input
            className="form-control"
            id="formLoginEmail"
            name="email"
            onChange={[Function]}
            placeholder="Email"
            type="text"
            value=""
          />
        </div>
        <br />
        <div>
          <input
            className="form-control"
            id="formLoginPassword"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
        <button
          className="submit-details btn btn-primary"
          disabled={false}
          type="submit"
        >
          Login
        </button>
        <p
          style={
            {
              "textDecoration": "underline",
            }
          }
        >
          or
        </p>
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          Register
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`UserEventsPage renders correctly 1`] = `
[
  <h1
    className="heading-styles"
  >
    EVENTS
  </h1>,
  <br />,
  <div
    id="top-menu"
  >
    <div
      className="dropdown"
      id="dropdown-menu"
    >
      <button
        aria-expanded={false}
        className="dropdown-toggle btn btn-success"
        disabled={false}
        id="dropdown-basic"
        onClick={[Function]}
        type="button"
      >
        Events
      </button>
    </div>
    <div
      style={
        {
          "display": "flex",
        }
      }
    >
      <form
        className=""
        inline="true"
      >
        <div
          onSubmit={[Function]}
        >
          <input
            className="form-control"
            id="searchEvent"
            name="locationSearch"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </form>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Search Event
      </button>
    </div>
    <button
      className="btn btn-primary"
      disabled={false}
      id="logout-btn"
      type="button"
    >
      Log Out
    </button>
  </div>,
  <div
    className="container"
  />,
]
`;
